samples/_failures_safe/1761796208_578112_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e13444ab.c: In function ‘main’:
./samples/SAFE/__tmp_e13444ab.c:157:17: error: expected declaration or statement at end of input
  157 |                 break;
      |                 ^~~~~
./samples/SAFE/__tmp_e13444ab.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e13444ab.c:157:17: error: expected declaration or statement at end of input
